# Http-Tester

./: Dockerfile  README.md  config.py  metrics.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: pytest.yml
pyload/: cli.py  engine.py  logger.py  main.py  reporter.py
tests/: test_cli.py  test_engine.py  test_metrics.py
