[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyload"
version = "0.1.0"
description = "High-Performance Asynchronous HTTP Load Testing & API Analyzer"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "PyYAML>=6.0.1",
    "rich>=13.7.0"
]
